--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -76,7 +76,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project
 # (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
 # or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=-Djava.library.path=./LWJGL/lwjgl-2.8.2/native/macosx
+run.jvmargs=-Djava.library.path=./lib/LWJGL/lwjgl-2.8.2/native/macosx
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
