--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -3,5 +3,5 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/Users/mitch/.netbeans/7.0/build.properties
+user.properties.file=C:\\Documents and Settings\\s067173246\\.netbeans\\7.0\\build.properties
 work.dir=${basedir}
