Added Slick-Util to the libraries, to be used for loading textures.

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -6,3 +6,6 @@ libs.LWJGL.javadoc=\
 libs.LWJGL.src=\
     ${base}/LWJGL/lwjgl-source-2/src/generated/:\
     ${base}/LWJGL/lwjgl-source-2/src/java/
+
+libs.Slick-Util.classpath=\
+    ${base}/Slick-Util/slick-util.jar
