--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,15 @@
 build/
 dist/
 
+# Logs
 *.log*
 
-# OS-generated files
-.DS_Store*
-ehthumbs.db
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 Icon?
+ehthumbs.db
 Thumbs.db
